Changelog:
0.112
- Added support to mapper : 562.
- Disabled portable mode for the AppImage (#378).
- Fixed mapper : 12, 17, 561.
- [NSF] Fixed display of timers when resetting the emulator (#380).
- [NSF] Fixed Fixed RAM and WRAM initialization when changing songs (#380 and #384).
- [NSF] Fixed wram destination pointer initialization (#383).
- [NSF] Fixed region selection (#380).
- [NSF] Fixed RAM initialization (#380).
- [NSF] Fixed nsf2 structure initialization when loading a file in NSFe format.
- [NSF Player] Fixed a bug that prevented the display of some song titles (#377).
- [NSF Player] Some NSFe have text encoded in ISO-8859-1 instead of UTF8, improved string encoding recognition (#377).
- [NSF Player] Fixed wrong playlist count (#377).
- [NSF Player] Improved display of author notes.

0.111
- Rewritten mappers : All.
- Rewritten WRAM, VRAM, PRGROM, CHROM and Nametebles management.
- Rewritten FDS support.
  * Furthermore, an option has been added to select the mode for write operations. Until now, all writes were stored on an external file (diff file) to preserve the integrity of the disk image, now it's possible to choose to write them directly to the FDS/QD file (making it portable to other emulators as well).
  * Changed the format of the diff file, now I use the IPS format (which can always be applied to the original image).
- Rewritten the format and management of save states.
  WARNING save states of version 0.110 or earlier are no longer compatible.
- Rewritten the audio of the VRC7.
  Implemented the project "A YM2413 emulator written in C" of okaxaki :
  * https://github.com/digital-sound-antiques/emu2413
- Rewritten NSF player.
  Added support to NSF2 format.
- Added the ability to configure shortcuts and the NES pad from the command line.
- Added support to Quick Disk format.
- Added an option for RAM initialization (#276).
  It's possible to choose between three values:
  * 0x00
  * 0xFF (default)
  * Randomize