@@ -99,7 +99,7 @@ To see a list of available command-line options, start puNES with the `-h` argum
 ## :electric_plug: Supported Mappers
 
 | 0   | 1   | 2   | 3   | 4   | 5   | 6   | 7   | 8   | 9   | 10  |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
+|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|
 | 11  | 12  | 13  | 14  | 15  | 16  | 17  | 18  | 19  | 20  | 21  |
 | 22  | 23  | 24  | 25  | 26  | 27  | 28  | 29  | 30  | 31  | 32  |
 | 33  | 34  | 35  | 36  | 37  | 38  |     | 40  | 41  | 42  | 43  |
@@ -142,7 +142,7 @@ To see a list of available command-line options, start puNES with the `-h` argum
 |     |     | 442 |     |     |     | 446 | 447 |     |     |     |
 | 451 | 452 |     |     | 455 | 456 | 457 |     |     |     |     |
 |     |     |     |     |     |     |     |     |     | 471 |     |
-|     |     |     |     |     |     |     |     |     |     |     |
+|     |     |     |     |     |     |     |     | 481 |     |     |
 |     |     |     |     |     |     |     |     |     |     |     |
 |     |     |     |     |     |     |     |     |     |     |     |
 |     |     |     |     |     |     | 512 | 513 |     |     | 516 |
