@@ -1,8 +1,8 @@
 Changelog:
 0.112
-- Added support to mapper : 562.
+- Added support to mapper : 481, 562.
 - Disabled portable mode for the AppImage (#378).
-- Fixed mapper : 12, 17, 561.
+- Fixed mapper : 12, 17, 561, 394.
 - [NSF] Fixed display of timers when resetting the emulator (#380).
 - [NSF] Fixed Fixed RAM and WRAM initialization when changing songs (#380 and #384).
 - [NSF] Fixed wram destination pointer initialization (#383).
@@ -13,6 +13,7 @@ Changelog:
 - [NSF Player] Some NSFe have text encoded in ISO-8859-1 instead of UTF8, improved string encoding recognition (#377).
 - [NSF Player] Fixed wrong playlist count (#377).
 - [NSF Player] Improved display of author notes.
+- [FDS] Fixed block CRC handling when loading QD format (#416).
 
 0.111
 - Rewritten mappers : All.
